sample_k8s_config/pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
    name: nginx-test
    labels:
        app: nginx-app
        type: backend-server
spec:
    containers:
        - name: nginx-container
          image: nginx
          ports:
            - containerPort: 80
