sample_k8s_config/cafe-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
   kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
       paths:
       - path: /tea
         backend:
              serviceName: tea-svc
              servicePort: 80
       - path: /coffee
         backend:
              serviceName: coffee-svc
              servicePort: 80
