sample_k8s_config/greeter-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greeter-ingress
spec:
  rules:
  - http:
      paths:
      - path: /greet
        backend:
          serviceName: greet-core-service
          servicePort: 3005
